--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <!-- <p>Please visit <a href="http://arpitx.github.io">arpitx.github.io</a></p> -->
         <div class="icons">
-        <a href="https://twitter.com/arpitbansalx"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/arp_ban"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
         <a href="https://www.facebook.com/arbansal"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
         <a href="https://github.com/arpban" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
         <!-- <a href="https://plus.google.com/110431456556582082302"><i class="fa fa-google-plus-official fa-2x" aria-hidden="true"></i></a> -->
